--- a/config/locales/spa/models.yml
+++ b/config/locales/spa/models.yml
@@ -1,6 +1,14 @@
 spa:
   activerecord:
     attributes:
+      activity:
+        # analytical_center_type: "Type de centre analytique"
+        # family: "Famille"
+        # favored_product_nature: "Produit de référence"
+        # net_margin: "Marge nette"
+        # nomen: "Code analytique"
+        # parent: "Activité parente"
+        # work_unit: "Unité d'oeuvre"
       animal:
         # born_at: "Date de naissance"
         # variety: "Race"
@@ -9,6 +17,8 @@ spa:
       animal_treatment_use: #?
       asset_depreciation:
         # asset_amount: "Valeur nette comptable (VNC)"
+      campaign:
+        # nomen: "Code nomenclature"
       cash:
         # key: "Clé RIB"
         # mode: "Mode"
@@ -308,12 +318,14 @@ spa:
     models:
       # account: "Compte"
       # account_balance: "Balance de compte"
+      # activity: "Activité"
       # affair: "Affaire"
       # animal: "Animal"
       # area: "Zone postale"
       # asset: "Immobilisation"
       # asset_depreciation: "Amortissement d’immobilisation"
       # bank_statement: "Relevé de compte bancaire"
+      # campaign: "Campagne"
       # cash: "Trésorerie"
       # cash_transfer: "Virement interne"
       company: "Compañía"
@@ -356,6 +368,7 @@ spa:
       # listing_node_item: "Élément de nœud d’extraction"
       # log: "Évènements des produits"
       # mandate: "Responsabilité"
+      # matter: "Matière"
       # observation: "Observation"
       # operation: "Travail"
       # outgoing_delivery: "Livraison"
@@ -416,6 +429,7 @@ spa:
     # age: "Âge"
     # allocation_account: "Compte de dotation"
     # amount: "Montant"
+    # analytical_center_type: "Analytical center type"
     # animal_drugs: "Médicaments"
     # animals: "Animals"
     # annotation: "Annotation"
@@ -1140,6 +1154,16 @@ spa:
     # work_number: "Numéro de travail"
     # zone: "Zone"
   enumerize:
+    activity:
+      analytical_center_type:
+        # ancillary: "Auxiliaire"
+        # main: "Principal"
+      family:
+        # animal: "Animale"
+        # perenne_vegetal: "Culture perenne"
+        # processing: "Transformation"
+        # service: "Service"
+        # vegetal: "Culture annuelle"
     animal: #?
     animal_treatment: #?
     asset:
