--- a/config/locales/fra/action.yml
+++ b/config/locales/fra/action.yml
@@ -13,6 +13,11 @@ fra:
       reconciliation: "Lettrage de comptes"
       show: "Compte\_: %{number} - %{name}"
       unmark: "Délettrer un compte"
+    backend/activities:
+      edit: "Modifier une activité\_: %{name}"
+      index: "Activités"
+      new: "Nouvelle activité"
+      show: "%{name}"
     backend/animals:
       edit: "Modifier l'animal\_: %{name}"
       index: "Productions animales"
@@ -36,6 +41,11 @@ fra:
       new: "Pointer un nouveau relevé de compte"
       point: "Pointer le relevé N°%{number}"
       show: "Relevé de compte N°%{number}"
+    backend/campaigns:
+      edit: "Campagne\_: %{name}"
+      index: "Campagnes"
+      new: "Nouvelle campagne"
+      show: "Campagne %{name}"
     backend/cash_transfers:
       edit: "Modifier le virement interne\_: %{number}"
       index: "Virements internes"
@@ -527,11 +537,13 @@ fra:
     authentication/sessions: "Sessions"
     backend/account_balances: "Soldes de comptes"
     backend/accounts: "Plan de comptes"
+    # backend/activities: "Backend/activities"
     backend/affairs: "Affaires"
     backend/animals: "Animaux"
     backend/areas: "Zones postales"
     backend/assets: "Immobilisations"
     backend/bank_statements: "Relevés de compte bancaire"
+    # backend/campaigns: "Backend/campaigns"
     backend/cash_transfers: "Virements internes"
     backend/cashes: "Trésoreries"
     # backend/cells/demo_bar_cells: "Backend/cells/demo bar cells"
