--- a/config/locales/jpn/action.yml
+++ b/config/locales/jpn/action.yml
@@ -13,6 +13,11 @@ jpn:
       # reconciliation: "Lettrage de comptes"
       # show: "Compte\_: %{number} - %{name}"
       # unmark: "Délettrer un compte"
+    backend/activities:
+      # edit: "Modifier une activité\_: %{name}"
+      # index: "Activités"
+      # new: "Nouvelle activité"
+      # show: "%{name}"
     backend/animals:
       # edit: "Modifier l'animal\_: %{name}"
       # index: "Productions animales"
@@ -36,6 +41,11 @@ jpn:
       # new: "Pointer un nouveau relevé de compte"
       # point: "Pointer le relevé N°%{number}"
       # show: "Relevé de compte N°%{number}"
+    backend/campaigns:
+      # edit: "Campagne\_: %{name}"
+      # index: "Campagnes"
+      # new: "Nouvelle campagne"
+      # show: "Campagne %{name}"
     backend/cash_transfers:
       # edit: "Modifier le virement interne\_: %{number}"
       # index: "Virements internes"
