--- a/config/locales/spa/action.yml
+++ b/config/locales/spa/action.yml
@@ -20,6 +20,11 @@ spa:
       reconciliation: "Marcar con letra los cuentos"
       show: "Compte : %{number} - %{name}"
       # unmark: "Délettrer un compte"
+    backend/activities:
+      # edit: "Modifier une activité\_: %{name}"
+      # index: "Activités"
+      # new: "Nouvelle activité"
+      # show: "%{name}"
     backend/animals:
       # edit: "Modifier l'animal\_: %{name}"
       # index: "Productions animales"
@@ -45,6 +50,11 @@ spa:
       point: "Despuntar el leventar N°%{number} du %{contado}"
       show: "Leventard de cuento N°%{number}"
     backend/base: #?
+    backend/campaigns:
+      # edit: "Campagne\_: %{name}"
+      # index: "Campagnes"
+      # new: "Nouvelle campagne"
+      # show: "Campagne %{name}"
     backend/cash_transfers:
       # edit: "Modifier le virement interne\_: %{number}"
       # index: "Virements internes"
