--- a/config/locales/arb/models.yml
+++ b/config/locales/arb/models.yml
@@ -1780,8 +1780,10 @@ arb:
       analytical_center_type:
         # ancillary: "Auxiliaire"
         # main: "Principal"
+        # none: "Aucun"
       family:
         # animal: "Animale"
+        # none: "Aucune"
         # perenne_vegetal: "Culture perenne"
         # processing: "Transformation"
         # service: "Service"
