--- a/config/locales/eng/action.yml
+++ b/config/locales/eng/action.yml
@@ -1728,6 +1728,8 @@ eng:
       all: "#{prescription_number} on {prescripted_on}" #?
     animals:  #?
       all: "{name} ({sex})" #?
+    backend/activities:
+      # all: "{name} - {nomen} - {family} - {analytical_center_type}"
     backend/animals:
       # all: "{name} - {work_number}"
     backend/entity_links:
