--- a/config/locales/jpn/action.yml
+++ b/config/locales/jpn/action.yml
@@ -1677,6 +1677,8 @@ jpn:
     animal_events: #?
     animal_prescriptions: #?
     animals: #?
+    backend/activities:
+      # all: "{name} - {nomen} - {family} - {analytical_center_type}"
     backend/animals:
       # all: "{name} - {work_number}"
     backend/entity_links:
