--- a/config/locales/jpn/models.yml
+++ b/config/locales/jpn/models.yml
@@ -1160,8 +1160,10 @@ jpn:
       analytical_center_type:
         # ancillary: "Auxiliaire"
         # main: "Principal"
+        # none: "Aucun"
       family:
         # animal: "Animale"
+        # none: "Aucune"
         # perenne_vegetal: "Culture perenne"
         # processing: "Transformation"
         # service: "Service"
