--- a/config/locales/spa/action.yml
+++ b/config/locales/spa/action.yml
@@ -1808,6 +1808,8 @@ spa:
     animal_events: #?
     animal_prescriptions: #?
     animals: #?
+    backend/activities:
+      # all: "{name} - {nomen} - {family} - {analytical_center_type}"
     backend/animals:
       # all: "{name} - {work_number}"
     backend/entity_links:
