--- a/config/locales/spa/models.yml
+++ b/config/locales/spa/models.yml
@@ -1158,8 +1158,10 @@ spa:
       analytical_center_type:
         # ancillary: "Auxiliaire"
         # main: "Principal"
+        # none: "Aucun"
       family:
         # animal: "Animale"
+        # none: "Aucune"
         # perenne_vegetal: "Culture perenne"
         # processing: "Transformation"
         # service: "Service"
