--- a/config/locales/fra/models.yml
+++ b/config/locales/fra/models.yml
@@ -9,6 +9,13 @@ fra:
         nomen: "Code analytique"
         parent: "Activité parente"
         work_unit: "Unité d'oeuvre"
+      analytic_repartition:
+        activity: "Activité"
+        affected_on: "Affecté le"
+        campaign: "Campagne"
+        journal_entry_item: "Ligne comptable concernée"
+        product_nature: "Type de produit concerné"
+        repartition_percentage: "Pourcentage d'affectation"
       animal:
         born_at: "Date de naissance"
         variety: "Race"
@@ -299,6 +306,7 @@ fra:
       account_balance: "Balance de compte"
       activity: "Activité"
       affair: "Affaire"
+      # analytic_repartition: "Analytic repartition"
       animal: "Animal"
       area: "Zone postale"
       asset: "Immobilisation"
@@ -415,6 +423,7 @@ fra:
     acquisition_amount: "Montant des acquisition"
     active: "Utilisable"
     active_prices: "Prix en cours"
+    # activity: "Activity"
     activity_code: "Code APE/NAF"
     actual_number: "Numéro en cours"
     address: "Adresse"
@@ -422,6 +431,7 @@ fra:
     administrator: "Administrateur système"
     affair: "Affaire"
     affairs: "Affaires"
+    # affected_on: "Affected on"
     age: "Âge" #?
     # alive: "Alive"
     allocation_account: "Compte de dotation"
@@ -483,6 +493,7 @@ fra:
     buildings: "Bâtiments" #?
     by_default: "Par défaut"
     cache: "Cache"
+    # campaign: "Campaign"
     canal: "Canal"
     # carried: "Carried"
     # carrier: "Carrier"
@@ -773,6 +784,7 @@ fra:
     journal: "Journal"
     journal_entries: "Écritures"
     journal_entry: "Écriture"
+    # journal_entry_item: "Journal entry item"
     journal_entry_items: "Lignes d’écritures"
     journals: "Journaux" #?
     key: "Clé"
@@ -1034,6 +1046,8 @@ fra:
     # remember_created_at: "Remember created at"
     remember_me: "Se souvenir de moi"
     # reminder_submissive: "Reminder submissive"
+    # repartition_percentage: "Repartition percentage"
+    repartitions: "Repartitions"
     # repeatable: "Repeatable"
     reproductor: "Reproducteur"
     required: "Obligatoire"
@@ -1724,6 +1738,7 @@ fra:
         km: "Kilomètre"
         l: "Litre"
         m: "Mètre"
+        m2: "Mètre carré"
         m3: "Mètre cube"
         t: "Tonne"
         u: "Unité"
