--- a/config/locales/arb/models.yml
+++ b/config/locales/arb/models.yml
@@ -22,6 +22,13 @@ arb:
         # nomen: "Code analytique"
         # parent: "Activité parente"
         # work_unit: "Unité d'oeuvre"
+      analytic_repartition:
+        # activity: "Activité"
+        # affected_on: "Affecté le"
+        # campaign: "Campagne"
+        # journal_entry_item: "Ligne comptable concernée"
+        # product_nature: "Type de produit concerné"
+        # repartition_percentage: "Pourcentage d'affectation"
       animal:
         # born_at: "Date de naissance"
         # variety: "Race"
@@ -1582,6 +1589,7 @@ arb:
     # relative_humidity: "Humidité relative"
     remaining_duration: "(مدة الاستخدام المتبقي (ساعات "
     # remember_me: "Se souvenir de moi"
+    # repartitions: "Repartitions"
     # reproductor: "Reproducteur"
     required: "الزامي"
     reservoir: "المخزن"
@@ -2592,6 +2600,7 @@ arb:
         # km: "Kilomètre"
         # l: "Litre"
         # m: "Mètre"
+        # m2: "Mètre carré"
         # m3: "Mètre cube"
         # t: "Tonne"
         # u: "Unité"
