--- a/config/locales/arb/action.yml
+++ b/config/locales/arb/action.yml
@@ -1997,6 +1997,8 @@ arb:
     animal_events: #?
     animal_prescriptions: #?
     animals: #?
+    backend/accounts:
+      # all: "{number}. {name}"
     backend/animals:
       # all: "{name} - {work_number}"
     backend/entity_links:
