--- a/config/locales/fra/action.yml
+++ b/config/locales/fra/action.yml
@@ -18,11 +18,16 @@ fra:
       index: "Activités"
       new: "Nouvelle activité"
       show: "%{name}"
-    backend/analytic_repartitions:
+    backend/activity_repartitions:
       edit: "Modifier la répartion analytique\_: %{id} "
       index: "Répartitions analytiques"
       new: "Nouvelle répartition analytique"
       show: "Répartition %{id}"
+    backend/activity_watchings:
+      # edit: "Edit backend/activity watching"
+      # index: "Index backend/activity watching"
+      # new: "New backend/activity watching"
+      # show: "Show backend/activity watching"
     backend/animals:
       edit: "Modifier l'animal\_: %{name}"
       index: "Productions animales"
@@ -543,8 +548,9 @@ fra:
     backend/account_balances: "Soldes de comptes"
     backend/accounts: "Plan de comptes"
     backend/activities: "Activités"
+    backend/activity_repartitions: "Répartitions analytiques"
+    # backend/activity_watchings: "Backend/activity watchings"
     backend/affairs: "Affaires"
-    backend/analytic_repartitions: "Répartitions analytiques"
     backend/animals: "Animaux"
     backend/areas: "Zones postales"
     backend/assets: "Immobilisations"
@@ -1759,8 +1765,8 @@ fra:
     backend/accounts:
       all: "{number}. {name}"
     backend/activities:
-      all: "{name} - {nomen} - {family} - {analytical_center_type}"
-    backend/analytic_repartitions:
+      all: "{name} ({family}/{nature})"
+    backend/activity_repartitions:
       all: "{id}"
     backend/animals:
       all: "{name} - {work_number}"
