--- a/config/locales/jpn/models.yml
+++ b/config/locales/jpn/models.yml
@@ -2,14 +2,14 @@ jpn:
   activerecord:
     attributes:
       activity:
-        # analytical_center_type: "Type de centre analytique"
         # family: "Famille"
         # favored_product_nature: "Produit de référence"
+        # nature: "Type de centre analytique"
         # net_margin: "Marge nette"
         # nomen: "Code analytique"
         # parent: "Activité parente"
         # work_unit: "Unité d'oeuvre"
-      analytic_repartition:
+      activity_repartition:
         # activity: "Activité"
         # affected_on: "Affecté le"
         # campaign: "Campagne"
@@ -426,6 +426,7 @@ jpn:
     # acquisition_amount: "Montant des acquisition"
     # active: "Utilisable"
     # active_prices: "Prix en cours"
+    # activity: "Activity"
     # activity_code: "Code APE/NAF"
     # actual_number: "Numéro en cours"
     # address: "Adresse"
@@ -436,7 +437,6 @@ jpn:
     # age: "Âge"
     # allocation_account: "Compte de dotation"
     # amount: "Montant"
-    # analytical_center_type: "Analytical center type"
     # animal_drugs: "Médicaments"
     # animals: "Animals"
     # annotation: "Annotation"
@@ -517,6 +517,7 @@ jpn:
     # clients: "Clients"
     # closable_financial_year: "Exercice clôturable"
     # closed: "Clôturé"
+    # closed_at: "Closed at"
     # closed_on: "Date de clôture"
     code: "コード"
     # code_aee: "Code normalisé EDI*"
@@ -1165,17 +1166,17 @@ jpn:
     # zone: "Zone"
   enumerize:
     activity:
-      analytical_center_type:
-        # ancillary: "Auxiliaire"
-        # main: "Principal"
-        # none: "Aucun"
       family:
         # animal: "Animale"
         # none: "Aucune"
-        # perenne_vegetal: "Culture perenne"
+        # perenne_vegetal: "Culture pérenne"
         # processing: "Transformation"
         # service: "Service"
         # vegetal: "Culture annuelle"
+      nature:
+        # ancillary: "Auxiliaire"
+        # main: "Principal"
+        # none: "Aucun"
     animal: #?
     animal_treatment: #?
     asset:
