--- a/config/locales/spa/action.yml
+++ b/config/locales/spa/action.yml
@@ -25,11 +25,12 @@ spa:
       # index: "Activités"
       # new: "Nouvelle activité"
       # show: "%{name}"
-    backend/analytic_repartitions:
+    backend/activity_repartitions:
       # edit: "Modifier la répartion analytique\_: %{id} "
       # index: "Répartitions analytiques"
       # new: "Nouvelle répartition analytique"
       # show: "Répartition %{id}"
+    backend/activity_watchings: #?
     backend/animals:
       # edit: "Modifier l'animal\_: %{name}"
       # index: "Productions animales"
@@ -568,8 +569,8 @@ spa:
     backend/accountancy: "Contabilidad" #?
     backend/accounts: "Plan de cuento"
     # backend/activities: "Activités"
+    # backend/activity_repartitions: "Répartitions analytiques"
     # backend/affairs: "Affaires"
-    # backend/analytic_repartitions: "Répartitions analytiques"
     # backend/animals: "Animaux"
     backend/application: "Aplicación" #?
     # backend/areas: "Zones postales"
@@ -1819,8 +1820,8 @@ spa:
     backend/accounts:
       # all: "{number}. {name}"
     backend/activities:
-      # all: "{name} - {nomen} - {family} - {analytical_center_type}"
-    backend/analytic_repartitions:
+      # all: "{name} ({family}/{nature})"
+    backend/activity_repartitions:
       # all: "{id}"
     backend/animals:
       # all: "{name} - {work_number}"
